# libfossil

./: CMakeLists.txt  README.md  fetch_fossil.sh
bindings/: CMakeLists.txt  fossil.i  test.rb
fossil_cmake/: CMakeLists.txt  main.cpp
fossil_cmake/tweaks/: VERSION.h
